# internal/docs/swagger.json
@@ -237,7 +237,7 @@
                 }
             }
         },
-        "/api/v1/mapping_rules/{id}": {
+        "/api/v1/mapping_rule/{id}": {
             "get": {
                 "tags": [
                     "MappingRule"
@@ -364,7 +364,7 @@
                 }
             }
         },
-        "/api/v1/stations": {
+        "/api/v1/station": {
             "get": {
                 "description": "List all stations",
                 "produces": [
@@ -410,7 +410,7 @@
                 }
             }
         },
-        "/api/v1/stations/{stationID}/mapping_rules": {
+        "/api/v1/station/{stationID}/mapping_rule": {
             "get": {
                 "tags": [
                     "MappingRule"
@@ -438,7 +438,7 @@
                 }
             }
         },
-        "/api/v1/stations/{station_id}": {
+        "/api/v1/station/{station_id}": {
             "get": {
                 "description": "Get station by ID",
                 "produces": [
